Linken aangepast, inhoud toegevoegd, login toegevoegd op andere pagina's, kleuren van lettertype op geel effe gezet voor leesbaarheid

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vas-y</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
+    
     <script src="js/bootstrap.js"></script>
     <script src="js/loginSignup.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -84,7 +85,7 @@
                     </div>-->
                     <li><a href="leerling.html">Leerling</a></li>
                     <li><a href="ouders.html">Ouder</a></li>
-                    <li><a href="#">Leerkrachten/Tutoren</a></li>
+                    <li><a href="leerkracht.html">Leerkrachten/Tutoren</a></li>
                     <li><a href="school.html">Scholen</a></li>
                     <li><a href="#">Medewerker</a></li>
 
@@ -101,26 +102,26 @@
     <div class="container">
         <h1 style="text-align: center">Vas-y</h1>
         <p class="margin-sides">
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+           Welkom bij Vas-y, dit project is een initiatief van de school Odisee waarbij kinderen en jongeren hulp krijgen van een naschoolse studiebegeleider. Deze begeleiders helpen de leerlingen bij problemen met inhoudelijke vakken maar ze helpen ook om de leerlingen te motiveren. 
         </p>
     </div>
     <div class="container">
         <div id="infoBoxContainer">
-            <h2>Titel</h2>
+            <h2>Info</h2>
             <p>
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
             </p>
             <div id="tutor" class="infoBox">
                 <h3>Tutor</h3>
-                <img src="img/tutor.png">
+                <a href="leerkracht.html" > <img src="img/tutor.png"></a>
             </div>
             <div id="tutee" class="infoBox">
                 <h3>Tutee</h3>
-                <img src="img/tutee.png">
+                <a href="leerling.html" > <img src="img/tutee.png"></a>
             </div>
             <div id="parent" class="infoBox">
                 <h3>Parent</h3>
-                <img src="img/parent.png">
+                <a href="ouders.html" ><img src="img/parent.png"></a>
             </div>
         </div>
 
@@ -187,10 +188,10 @@ niet afging.” </span>
     <div class="footer">
         <div class="row">
             <div class="col-sm-4 footercolumn">
-                Kolom 1
+                Contact
             </div>
             <div class="col-sm-4 footercolumn">
-                Kolom 2
+                Partners
             </div>
             <div class="col-sm-4 footercolumn">
                 Kolom 3
