--- a/ouders.html
+++ b/ouders.html
@@ -47,14 +47,14 @@
     </nav>
 
 Het begeleidingsprogramma Vas-y wordt in onze school georganiseerd. <br>
-Dit project is een initiatief van de hogeschool Odisee- Campus Brussel en wordt gesubsidieerd door het Departement Onderwijs en vorming.<br><br>
+Dit project is een initiatief van de hogeschool Odisee Campus Brussel en wordt gesubsidieerd door het Departement Onderwijs en vorming.<br><br>
 
 Bij Vas-y staan Brusselse leerlingen centraal. 
 Zo helpen de studenten van de lerarenopleiding Secundair Onderwijs onze leerlingen met taal , lees- en leerstrategieën, leerstof, … 
 Studenten vertrekken daarbij van de talenten en interesses van de leerlingen en bieden begeleiding op maat.<br><br>
 
 De deelname aan het project is bovendien volledig kosteloos. 
-Leerlingen nemen vrijwillig deel, maar houden zich aan de afspraak telkens aanwezig te zijn en mee te werken. 
+Leerlingen nemen vrijwillig deel, maar houden zich aan de afspraak telkens aanwezig te zijn en mee te werken wanneer ze zich inschrijven. 
 Concreet betekent dit dat de leerlingen en de studenten zes keer anderhalf uur samenkomen. 
 De begeleidingssessies zullen doorgaan op school zelf en na de schooluren.
 
