Actieve link aangepast

--- a/leerkracht.html
+++ b/leerkracht.html
@@ -62,7 +62,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="leerling.html">Leerling</a></li>
                     <li><a href="ouders.html">Ouder</a></li>
-                    <li><a href="#">Leerkrachten/Tutoren</a></li>
+                    <li class="active"><a href="#">Leerkrachten/Tutoren</a></li>
                     <li><a href="school.html">Scholen</a></li>
                     <li><a href="medewerker.html">Medewerker</a></li>
 
