--- a/leerling.html
+++ b/leerling.html
@@ -61,7 +61,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
-                     <li><a href="#">Leerling</a></li>
+                     <li class="active"><a href="#">Leerling</a></li>
                     <li><a href="ouders.html">Ouder</a></li>
                     <li><a href="leerkracht.html">Leerkrachten/Tutoren</a></li>
                     <li><a href="school.html">Scholen</a></li>
