--- a/medewerker.html
+++ b/medewerker.html
@@ -64,7 +64,7 @@
                     <li><a href="ouders.html">Ouder</a></li>
                     <li><a href="leerkracht.html">Leerkrachten/Tutoren</a></li>
                     <li><a href="school.html">Scholen</a></li>
-                    <li><a href="#">Medewerker</a></li>
+                    <li class="active"><a href="#">Medewerker</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
