--- a/school.html
+++ b/school.html
@@ -64,7 +64,7 @@
                      <li><a href="leerling.html">Leerling</a></li>
                     <li><a href="ouders.html">Ouder</a></li>
                     <li><a href="leerkracht.html">Leerkrachten/Tutoren</a></li>
-                    <li><a href="#">Scholen</a></li>
+                    <li class="active"><a href="#">Scholen</a></li>
                     <li><a href="medewerker.html">Medewerker</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
