--- a/ouders.html
+++ b/ouders.html
@@ -62,7 +62,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="leerling.html">Leerling</a></li>
-                    <li><a href="#">Ouder</a></li>
+                    <li class="active"><a href="#">Ouder</a></li>
                     <li><a href="leerkracht.html">Leerkrachten/Tutoren</a></li>
                     <li><a href="school.html">Scholen</a></li>
                     <li><a href="medewerker.html">Medewerker</a></li>
