Kleine aanpassingen, wat design en verbeteringetjes

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -54,10 +54,10 @@
     <div class="row">
         <div class="col-sm-3" id="leftDash">
             <ul id="menu">
-                <li><a href="index.html">Dashboard</a></li>
+                <li><a href="#">Dashboard</a></li>
                 <li><a href="berichten.html">Berichten</a></li>
                 <li><a href="leerkrachten.html">Leerkrachten</a></li>
-                <li><a href="#Afspraken">Jouw afspraken</a></li>
+                <li><a href="afspraken.html">Jouw afspraken</a></li>
             </ul>
         </div>
 
