--- a/dashboard/leerkrachten.html
+++ b/dashboard/leerkrachten.html
@@ -56,8 +56,8 @@
             <ul id="menu">
                 <li><a href="index.html">Dashboard</a></li>
                 <li><a href="berichten.html">Berichten</a></li>
-                <li><a href="leerkrachten.html">Leerkrachten</a></li>
-                <li><a href="#Afspraken">Jouw afspraken</a></li>
+                <li><a href="#">Leerkrachten</a></li>
+                <li><a href="afspraken.html">Jouw afspraken</a></li>
             </ul>
         </div>
 
