--- a/dashboard/berichten.html
+++ b/dashboard/berichten.html
@@ -55,9 +55,9 @@
         <div class="col-sm-3" id="leftDash">
             <ul id="menu">
                 <li><a href="index.html">Dashboard</a></li>
-                <li><a href="berichten.html">Berichten</a></li>
+                <li><a href="#">Berichten</a></li>
                 <li><a href="leerkrachten.html">Leerkrachten</a></li>
-                <li><a href="#Afspraken">Jouw afspraken</a></li>
+                <li><a href="afspraken.html">Jouw afspraken</a></li>
             </ul>
         </div>
 
